global settings collapse button design fixed

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -8432,23 +8432,7 @@
 
 			.everest-forms-settings-container {
 				padding: 24px 20px 52px 36px;
-    			box-shadow: none;
-
-				.everest-forms-integration-back-button {
-					padding: 8px 12px;
-					border: 1px solid #2271b1;
-					display: block;
-					width: max-content;
-					margin-bottom: 20px;
-					border-radius: 3px;
-					font-size: 14px;
-					line-height: 16px;
-
-					&:focus {
-						outline: none;
-						box-shadow: none;
-					}
-				}
+    			box-shadow: none;				
 
 				.everest-forms-options-header {
 					margin-bottom: 32px;
@@ -8578,10 +8562,6 @@
 							&.forminp-select {
 								.select2-container {
 									width: 100% !important;
-
-									// .dropdown-wrapper {
-									// 	display: none;
-									// }
 								}
 
 								.select2-selection {
